--- a/css/main.css
+++ b/css/main.css
@@ -20,16 +20,25 @@ html, body {
 	display: none;
 	border: 1px solid black;
 	background-color: #ffffff;
+	margin: auto;
 }
 
 .dialog.visible {
 	display: block;
 }
 
+.dialog .closeDialog {
+	float: right;
+	height: 16px;
+	width: 16px;
+	background-image: url("../jquery-ui/images/ui-icons_222222_256x240.png");
+	background-position: -80px -128px;
+}
+
 /* main part */
 
 #mainNav {
-	background-color: grey;
+	background-color: #909090;
 	margin-bottom: 10px;
 }
 
