fixes #7. changes font-family

--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,8 @@
 html, body {
 	height: 100%;
 	width: 100%;
+	overflow:hidden;
+	font-family:Arial,Verdana,sans-serif;
 }
 
 /* some useful classes */
