--- a/themes/default/default.css
+++ b/themes/default/default.css
@@ -41,3 +41,10 @@ html {
 #openDatabaseDialog > p {
 	background-color: #FF943C;
 }
+#openDatabaseDialog > ul >li:hover {
+	background-color:#cccccc;
+	-webkit-transition: background 0.5s ease; 
+	-moz-transition: background 0.5s ease; 
+	-o-transition: background 0.5s ease;
+	transition: background 0.5s ease; 
+}
