--- a/themes/default/default.css
+++ b/themes/default/default.css
@@ -15,36 +15,78 @@ html {
 .button {
 	background-color: #009BB5;
     border: none;
+    -webkit-transition: background 0.3s ease; 
+	-moz-transition: background 0.3s ease; 
+	-o-transition: background 0.3s ease;
+	transition: background 0.3s ease; 
 }
 
 .button:hover {
 	background-color: #00DBFF;
+	-webkit-transition: background 0.3s ease; 
+	-moz-transition: background 0.3s ease; 
+	-o-transition: background 0.3s ease;
+	transition: background 0.3s ease; 
 }
 
 #mainNav {
 	background-color: #FF943C;
 }
 
+#mainNav > ul > li {
+	background-color: transparent;
+	-webkit-transition: background 0.3s ease; 
+	-moz-transition: background 0.3s ease; 
+	-o-transition: background 0.3s ease;
+	transition: background 0.3s ease; 
+}
+
 #mainNav > ul > li:hover {
 	background-color: #FF7200;
+	-webkit-transition: background 0.3s ease; 
+	-moz-transition: background 0.3s ease; 
+	-o-transition: background 0.3s ease;
+	transition: background 0.3s ease; 
 }
 
 #modeNav > ul > li {
 	background-color: #BF5600;
 	color: #FFFFFF;
+	-webkit-transition: background 0.3s ease; 
+	-moz-transition: background 0.3s ease; 
+	-o-transition: background 0.3s ease;
+	transition: background 0.3s ease; 
 }
 
 #modeNav > ul > li:hover {
 	background-color: #FF7200;
+	-webkit-transition: background 0.3s ease; 
+	-moz-transition: background 0.3s ease; 
+	-o-transition: background 0.3s ease;
+	transition: background 0.3s ease; 
+}
+
+#openDatabaseDialog {
+	-webkit-box-shadow: 2px 2px 10px 0 #8C8C8C;
+	box-shadow: 2px 2px 10px 0 #8C8C8C;
 }
 
 #openDatabaseDialog > p {
 	background-color: #FF943C;
 }
-#openDatabaseDialog > ul >li:hover {
+
+#openDatabaseDialog > ul > li {
+	background-color: transparent;
+	-webkit-transition: background 0.3s ease; 
+	-moz-transition: background 0.3s ease; 
+	-o-transition: background 0.3s ease;
+	transition: background 0.3s ease; 
+}
+
+#openDatabaseDialog > ul > li:hover {
 	background-color:#cccccc;
-	-webkit-transition: background 0.5s ease; 
-	-moz-transition: background 0.5s ease; 
-	-o-transition: background 0.5s ease;
-	transition: background 0.5s ease; 
+	-webkit-transition: background 0.3s ease; 
+	-moz-transition: background 0.3s ease; 
+	-o-transition: background 0.3s ease;
+	transition: background 0.3s ease; 
 }
