--- a/css/main.css
+++ b/css/main.css
@@ -66,7 +66,8 @@ html, body {
 	-webkit-transition: width 0.3s ease; 
 	-moz-transition: width 0.3s ease; 
 	-o-transition: width 0.3s ease;
-	transition: width 0.3s ease; 
+	transition: width 0.3s ease;
+	z-index: 100;
 }
 
 #modeNav > ul > li {
@@ -86,4 +87,13 @@ html, body {
 
 #openDatabaseDialog-databaseList > li {
     list-style-type: none;
+}
+
+#chessboardWrapper {
+	float: left;
+}
+
+#windows {
+	float: right;
+	margin: 10px 20px 0 0;
 }
