--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,9 @@
-/* reset */
+/**********************
+* this is the css file used for things that are common to all themes such as all kinds of sizes (padding, margin, width, height, ...)
+* Don't put colors, font-familys, backgroun-images or anything like that in here. That's what the themes/ folder is for
+**********************/
+
+/* some kind of primitive reset */
 
 * {
 	margin: 0;
@@ -8,7 +13,7 @@
 html, body {
 	height: 100%;
 	width: 100%;
-	overflow: hidden;
+	overflow: hidden; /* actually there should never be any overflow. This line is needed to prevent a strange layout error from happening. See https://github.com/jupiter24/web-chess/issues/7 */
 }
 
 /* some useful classes */
@@ -29,7 +34,7 @@ html, body {
 }
 
 .dialog .closeDialog {
-	/* Automatically place a close button in the top-right corner and set the background-image */
+	/* Automatically place a close button in the top-right corner */
 	float: right;
 	height: 16px;
 	width: 16px;
@@ -121,4 +126,3 @@ html, body {
 #main-windows-games-gameList th {
 	padding: 4px;
 }
-
