added the CreateGameDialog

--- a/css/main.css
+++ b/css/main.css
@@ -93,6 +93,12 @@ html, body {
 #openDatabaseDialog-databaseList > li {
     list-style-type: none;
 }
+#createGameDialog > form > input {
+	float:right;
+}
+#dialog-createGameButton{
+	float:left;
+}
 
 #main {
 	margin: 0 20px 0 10px;
