--- a/themes/default/default.css
+++ b/themes/default/default.css
@@ -75,6 +75,7 @@ html {
 	background-color: #FF943C;
 }
 
+
 #openDatabaseDialog > ul > li {
 	background-color: transparent;
 	-webkit-transition: background 0.3s ease; 
@@ -89,4 +90,7 @@ html {
 	-moz-transition: background 0.3s ease; 
 	-o-transition: background 0.3s ease;
 	transition: background 0.3s ease; 
+}
+#createGameDialog > p {
+	background-color: #FF943C;
 }
