--- a/public/js/components/app/app.html
+++ b/public/js/components/app/app.html
@@ -1,3 +1,14 @@
-<link rel="import" href="lib/paper-button/paper-button.html">
-<h1>It works!</h1>
-<paper-button raised>Click me!</paper-button>
+<style>
+    paper-toolbar {
+        box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14),
+                  0 1px 10px 0 rgba(0, 0, 0, 0.12),
+                  0 2px 4px -1px rgba(0, 0, 0, 0.4);
+    }
+</style>
+<paper-toolbar>
+    <paper-icon-button icon="menu"></paper-icon-button>
+    <div class="title">WebChess</div>
+    <expandable-search></expandable-search>
+    <paper-icon-button icon="account-box"></paper-icon-button>
+</paper-toolbar>
+<tabs [tabs]="tabList"></tabs>
