--- a/resources/assets/ts/components/tabs/tabs.html
+++ b/resources/assets/ts/components/tabs/tabs.html
@@ -1,10 +1,10 @@
-<paper-tabs noink #paperTabs selected="0" attr-for-selected="tab-id" (iron-select)="ironPages.select(paperTabs.selected)">
-    <paper-tab *ngFor="#tab of tabs" [tab-id]="tab.id">
+<paper-tabs noink #paperTabs selected="0"
+     (iron-select)="ironPages.select(paperTabs.selected)">
+    <paper-tab *ngFor="#tab of tabs">
         {{tab.name}}
-        <paper-icon-button icon="close" onclick="this.closeTab(tab)"></paper-icon-button>
+        <paper-icon-button icon="close" (click)="closeTab(tab); paperTabs.notifyResize()"></paper-icon-button>
     </paper-tab>
 </paper-tabs>
-{{paperTabs.innerHtml}}
-<iron-pages #ironPages attr-for-selected="tab-id">
-    <div *ngFor="#tab of tabs" [innerHtml]="tab.content" [tab-id]="tab.id"></div>
+<iron-pages #ironPages>
+    <div *ngFor="#tab of tabs" [innerHtml]="tab.content"></div>
 </iron-pages>
