Decouple tabs even more
Displaying the content of a tab is now not only handled by a different
service but also by a different component.

--- a/public/js/components/tabs/tabs.html
+++ b/public/js/components/tabs/tabs.html
@@ -7,5 +7,7 @@
     <paper-icon-button icon="add" (click)="newTab(); paperTabs.notifyResize()"></paper-icon-button>
 </paper-tabs>
 <iron-pages #ironPages>
-    <div *ngFor="#tab of getTabs()" [innerHtml]="getContent(tab)"></div>
+    <div *ngFor="#tab of getTabs()">
+        <tab-content [tab]="tab"></tab-content>
+    </div>
 </iron-pages>
