Add a chess board
There have been quite a lot of changes to accomplish that:
1. jspm is now used to manage front-end dependencies
2. chessground and chess-es6 have been added (the latter via a
submodule)
3. tab management has been refactored: The content of a tab is a single
Component. The tab-content service determines which one to use.

TODO:
1. Support promotion (UI)
2. Fix a bug when mutliple tabs are open
3. Make layout a little more flexible
4. Move chess logic into its own service

--- a/resources/assets/ts/components/tabs/tabs.html
+++ b/resources/assets/ts/components/tabs/tabs.html
@@ -7,5 +7,5 @@
     <paper-icon-button icon="add" (click)="newTab(); paperTabs.notifyResize()"></paper-icon-button>
 </paper-tabs>
 <iron-pages #ironPages>
-    <div *ngFor="#tab of getTabs()" [innerHtml]="getContent(tab)"></div>
+    <tab-content *ngFor="#tab of getTabs()" [tab]="tab"></tab-content>
 </iron-pages>
