--- a/resources/assets/ts/components/tabs/tabs.html
+++ b/resources/assets/ts/components/tabs/tabs.html
@@ -1,11 +1,12 @@
-<paper-tabs noink #paperTabs selected="0"
-     (iron-select)="ironPages.select(paperTabs.selected)">
-    <paper-tab *ngFor="#tab of getTabs()">
+<paper-tabs noink #paperTabs
+    attr-for-selected="tab-id"
+    (iron-select)="ironPages.select(paperTabs.selected)">
+    <paper-tab *ngFor="#tab of getTabs()" [attr.tab-id]="tab.id">
         {{tab.name}}
         <paper-icon-button icon="close" (click)="closeTab(tab); paperTabs.notifyResize()"></paper-icon-button>
     </paper-tab>
     <paper-icon-button icon="add" (click)="newTab(); paperTabs.notifyResize()"></paper-icon-button>
 </paper-tabs>
-<iron-pages #ironPages>
-    <tab-content *ngFor="#tab of getTabs()" [tab]="tab"></tab-content>
+<iron-pages #ironPages attr-for-selected="tab-id">
+    <tab-content *ngFor="#tab of getTabs()" [tab]="tab" [attr.tab-id]="tab.id"></tab-content>
 </iron-pages>
