Support promotion in the UI
When a pawn reaches the 1st/8th rank, it is promoted to a queen by
default. At the same time, a small bar appears where the user can choose
another piece. If they do, that piece is used instead. But the bar can
also be ignored because the move is complete without any further action
(so e.g. exporting the game as a PGN would use the queen). If the next
move is made, the bar disappears again.

--- a/resources/assets/components/chess-board/chess-board.html
+++ b/resources/assets/components/chess-board/chess-board.html
@@ -1,4 +1,13 @@
-<div style="float: left" class="chessground blue cburnett" #chessground [style.width.px]="chessground.scrollHeight"></div>
+<div id="chessgroundContainer" style="float: left">
+    <div class="chessground blue cburnett" #chessground [style.width.px]="chessground.scrollHeight"></div>
+
+    <div id="promotionChoice" *ngIf="_begunPromotion">
+        <div id="promotionRook" [class]="_getFullNotTurnColor()" (click)="_setPromotion('rook')"></div>
+        <div id="promotionBishop" [class]="_getFullNotTurnColor()" (click)="_setPromotion('bishop')"></div>
+        <div id="promotionKnight" [class]="_getFullNotTurnColor()" (click)="_setPromotion('knight')"></div>
+    </div>
+</div>
+
 <div>
     {{getScoresheet()}}
 </div>
