Move chess logic into service

--- a/resources/assets/components/game/game.html
+++ b/resources/assets/components/game/game.html
@@ -3,3 +3,5 @@
 <paper-icon-button icon="arrow-back" (click)="chessBoard.back()"></paper-icon-button>
 <paper-icon-button icon="swap-vertical-circle" (click)="chessBoard.rotateBoard()"></paper-icon-button>
 <paper-icon-button icon="arrow-forward" (click)="chessBoard.forward()"></paper-icon-button>
+
+<pgn style="float: right;"></pgn>
