Make moves clickable
Clicking a move now navigates to the position after that move.

Note: Angular has been updated to RC.1 and typings has been added.
Please update all npm ans jspm dependencies, then run `npm run typings
install` and `npm run gulp`.

--- a/resources/assets/components/game/game.html
+++ b/resources/assets/components/game/game.html
@@ -4,4 +4,4 @@
 <paper-icon-button icon="swap-vertical-circle" (click)="chessBoard.rotateBoard()"></paper-icon-button>
 <paper-icon-button icon="arrow-forward" (click)="chessBoard.forward()"></paper-icon-button>
 
-<pgn style="float: right;"></pgn>
+<pgn style="float: right;" (updatePosition)="chessBoard.update()"></pgn>
