--- a/resources/assets/components/pgn/pgn-move.html
+++ b/resources/assets/components/pgn/pgn-move.html
@@ -1,2 +1,2 @@
-{{getMoveNumberString()}}<span class="san">{{getSAN()}}</span>
+<span class="san" (click)="goToPosition()">{{getMoveNumberString()}}{{getSAN()}}</span>
 <ng-content></ng-content>
