--- a/resources/assets/components/pgn/pgn.html
+++ b/resources/assets/components/pgn/pgn.html
@@ -1,2 +1,2 @@
-<pgn-line [line]="getMainline()">
+<pgn-line [line]="getMainline()" [basePosition]="getBasePosition()" (updatePosition)="onUpdatePosition()">
 </pgn-line>
